[gd_scene load_steps=6 format=3 uid="uid://qd31t5ytmrft"]

[ext_resource type="Script" path="res://Scenes/PlaySetup.gd" id="1_o7p1v"]
[ext_resource type="Texture2D" uid="uid://bkd703ivppc5y" path="res://MCMUnchecked.png" id="2_3j3of"]
[ext_resource type="PackedScene" uid="uid://c7qdk4crw0kvf" path="res://IntLineEdit.tscn" id="2_s370d"]
[ext_resource type="Script" path="res://Scenes/FalloutCheckboxMCM.gd" id="4_sif1m"]
[ext_resource type="Texture2D" uid="uid://dsmek6qhvw8t6" path="res://MCMChecked.png" id="5_27bw8"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o7p1v")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="EnemySettings" type="PanelContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/EnemySettings"]
layout_mode = 2

[node name="CaravanVBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CaravanMarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CaravanVBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 2

[node name="CaravanLabel" type="Label" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CaravanVBoxContainer/CaravanMarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Caravan"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CaravanVBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CaravanVBoxContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MaxValueHBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Maximum value to sell a caravan (inclusive)"

[node name="MaxValueLabel" type="Label" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/MaxValueHBoxContainer"]
layout_mode = 2
text = "Max Value "

[node name="MaxValueLineEdit" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/MaxValueHBoxContainer" instance=ExtResource("2_s370d")]
layout_mode = 2
tooltip_text = "Maximum value to sell a caravan (inclusive)"
text = "26"

[node name="MinValueHBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Minimum value to sell a caravan (inclusive)"

[node name="MinValueLabel" type="Label" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/MinValueHBoxContainer"]
layout_mode = 2
text = "Min Value "

[node name="MinValueLineEdit" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/MinValueHBoxContainer" instance=ExtResource("2_s370d")]
layout_mode = 2
tooltip_text = "Minimum value to sell a caravan (inclusive)"
text = "21"

[node name="MaxCardsHBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Maximum number of numeric cards that can be played in a caravan"

[node name="MaxCardsLabel" type="Label" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/MaxCardsHBoxContainer"]
layout_mode = 2
text = "Max Cards "

[node name="MaxCardsLineEdit" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/MaxCardsHBoxContainer" instance=ExtResource("2_s370d")]
layout_mode = 2
tooltip_text = "Maximum number of numeric cards that can be played in a caravan"
text = "20"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="CardVBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.2

[node name="CardMarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CardVBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 1.1
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 2

[node name="CardLabel" type="Label" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CardVBoxContainer/CardMarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Card
"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CardVBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CardVBoxContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CardVBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CardVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="QueenChangeSuitButton" type="Button" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CardVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Whether playing a queen changes the direction of the caravan it's played on."
theme_type_variation = &"ButtonCheckboxMCM"
toggle_mode = true
text = "Queen Changes Suit"
icon = ExtResource("2_3j3of")
alignment = 0
icon_alignment = 2
script = ExtResource("4_sif1m")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CardVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="QueenChangeDirectionButton" type="Button" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CardVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Whether playing a queen changes the suit of its number card."
theme_type_variation = &"ButtonCheckboxMCM"
toggle_mode = true
text = "Queen Changes Direction"
icon = ExtResource("2_3j3of")
alignment = 0
icon_alignment = 2
script = ExtResource("4_sif1m")

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CardVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="FaceCardFirstRoundButton" type="Button" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CardVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"ButtonCheckboxMCM"
disabled = true
toggle_mode = true
button_pressed = true
text = "Allow Face Card First Round"
icon = ExtResource("5_27bw8")
alignment = 0
icon_alignment = 2
script = ExtResource("4_sif1m")

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CardVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="FaceMatchSuitButton" type="Button" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CardVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"ButtonCheckboxMCM"
disabled = true
toggle_mode = true
text = "Require Face Card Match Suit"
icon = ExtResource("2_3j3of")
alignment = 0
icon_alignment = 2
script = ExtResource("4_sif1m")

[node name="Control" type="Control" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/CardVBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="DeckVBoxContainer3" type="VBoxContainer" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DeckMarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/DeckVBoxContainer3"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 2

[node name="DeckLabel" type="Label" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/DeckVBoxContainer3/DeckMarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Deck
"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/DeckVBoxContainer3"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/DeckVBoxContainer3/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DeckMinCardsHBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Minimum starting number of cards allowed in the deck"

[node name="MinCardsLabel" type="Label" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer/DeckMinCardsHBoxContainer"]
layout_mode = 2
text = "Min Cards "

[node name="MinCardsLineEdit" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer/DeckMinCardsHBoxContainer" instance=ExtResource("2_s370d")]
layout_mode = 2
tooltip_text = "Minimum starting number of cards allowed in the deck"
text = "30"

[node name="DeckMaxCardsHBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Maximum starting number of cards allowed in the deck"

[node name="MaxCardsLabel" type="Label" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer/DeckMaxCardsHBoxContainer"]
layout_mode = 2
text = "Max Cards "

[node name="MaxCardsLineEdit" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer/DeckMaxCardsHBoxContainer" instance=ExtResource("2_s370d")]
layout_mode = 2
tooltip_text = "Maximum starting number of cards allowed in the deck"
text = "108"

[node name="ShuffleHBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Shuffle deck before starting game"

[node name="ShuffleButton" type="Button" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer/ShuffleHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Shuffle deck before starting game"
theme_type_variation = &"ButtonCheckboxMCM"
disabled = true
toggle_mode = true
text = "Shuffle"
icon = ExtResource("2_3j3of")
alignment = 0
icon_alignment = 2
script = ExtResource("4_sif1m")

[node name="UniqueCardsHBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Prevent filling a deck of only: 10's, 6's and kings?"

[node name="UniqueCardsButton" type="Button" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer/UniqueCardsHBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Prevent filling a deck of only: 10's, 6's and kings?"
theme_type_variation = &"ButtonCheckboxMCM"
disabled = true
toggle_mode = true
button_pressed = true
text = "Require Unique Cards"
icon = ExtResource("5_27bw8")
alignment = 0
icon_alignment = 2
script = ExtResource("4_sif1m")

[node name="DeckSeedCardsHBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Seed for randomized deck, leave blank for random"

[node name="DeckSeedLabel" type="Label" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer/DeckSeedCardsHBoxContainer2"]
layout_mode = 2
text = "Deck Seed "

[node name="DeckSeedLineEdit" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer/DeckSeedCardsHBoxContainer2" instance=ExtResource("2_s370d")]
layout_mode = 2
tooltip_text = "Seed for randomized deck, leave blank for random"

[node name="Control" type="Control" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Spacer" type="Control" parent="VBoxContainer/MarginContainer/EnemySettings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.33
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 5

[node name="SyncButtons" type="PanelContainer" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2/SyncButtons"]
layout_mode = 2

[node name="Spacer" type="Control" parent="VBoxContainer/MarginContainer2/SyncButtons/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="CopyDown" type="Button" parent="VBoxContainer/MarginContainer2/SyncButtons/HBoxContainer"]
custom_minimum_size = Vector2(250, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Copy from opponent to player"

[node name="Spacer3" type="Control" parent="VBoxContainer/MarginContainer2/SyncButtons/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="CopyUp" type="Button" parent="VBoxContainer/MarginContainer2/SyncButtons/HBoxContainer"]
custom_minimum_size = Vector2(250, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Copy from player to opponent"

[node name="Spacer2" type="Control" parent="VBoxContainer/MarginContainer2/SyncButtons/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10

[node name="OurSettings" type="PanelContainer" parent="VBoxContainer/MarginContainer3"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
size_flags_stretch_ratio = 0.5
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="PlayOrBackButtons" type="PanelContainer" parent="VBoxContainer/MarginContainer4"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer4/PlayOrBackButtons"]
layout_mode = 2

[node name="Spacer" type="Control" parent="VBoxContainer/MarginContainer4/PlayOrBackButtons/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer/MarginContainer4/PlayOrBackButtons/HBoxContainer"]
custom_minimum_size = Vector2(75, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back"

[node name="Spacer3" type="Control" parent="VBoxContainer/MarginContainer4/PlayOrBackButtons/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="PlayButton" type="Button" parent="VBoxContainer/MarginContainer4/PlayOrBackButtons/HBoxContainer"]
custom_minimum_size = Vector2(75, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Play"

[node name="Spacer2" type="Control" parent="VBoxContainer/MarginContainer4/PlayOrBackButtons/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/MarginContainer4/PlayOrBackButtons/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer4/PlayOrBackButtons/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
